# termlauncher

./: .gitignore  LICENSE  Readme.md  build_instructions.txt  cmtest.py  key.css  key.py  keylaunch.css  keylaunch.py  plugin_ai.py  plugin_apps.py  plugin_steam.py  plugin_websearch.py  pyproject.toml  requirements.txt  settings.json  termlauncher.css  termlauncher.py  test.py
plugins/: plugin_ai.py  plugin_soundoutput.py  plugin_websearch.py  requirements.txt
plugins/apps/: requirements.txt  settings.json
plugins/audiodevices/: settings.json
plugins/openai/: plugin_ai.py  requirements.txt  settings.json
plugins/plugins/: plugin_plugins.py  requirements.txt  settings.json
plugins/steam/: plugin_steam.py  requirements.txt  settings.json
plugins/websearch/: settings.json
src/termlauncher/: __main__.py  old__main__.py
termlaunch/: __init__.py
termlauncher/: __main__.py
tests/: apppath-test.py  gist-test.py
