[build-system]
requires = [
	"setuptools>=42",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "termlauncher"
version = "0.1.5"
authors = [
	{ name="falldeaf", email="falldeaf@gmail.com" },
]
description = "A Textual-based terminal launcher"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/falldeaf/termlauncher"